--- a/part_2/phonebook/src/index.css
+++ b/part_2/phonebook/src/index.css
@@ -11,4 +11,9 @@ h2:first-child::first-letter{font-size:3rem;}
 li{text-decoration: none;list-style: none;padding:0;margin:0}
 ul{padding:0;margin:0}
 
-.container{background:#1e1e1e;margin-left:5rem;padding:1px 20px  20px 20px; margin-top:2rem; width:250px;text-align:left; border-left:10px groove #777; box-shadow:0px 0px 0 2px #777;overflow:scroll}
+
+
+
+.page1{background:#1e1e1e;margin-left:5rem;padding:1px 20px  20px 20px; margin-top:2rem; width:300px;text-align:left;  box-shadow:0px 0px 0 2px #777;overflow:scroll;float:left;min-height:500px}
+
+.page2{float:left;background:#1e1e1e;margin-left:0;padding:1px 20px  20px 20px; margin-top:2rem; width:300px;text-align:left;  box-shadow:0px 0px 0 2px #777;overflow:scroll;float:left;min-height:500px;border-left:groove 10px #777 }
