--- a/part_5/bloglist-frontend/src/index.css
+++ b/part_5/bloglist-frontend/src/index.css
@@ -1,8 +1,13 @@
 .notification {
-  color: white;
-  background-color: green;
-  padding: 10px;
-  border-radius: 5px;
-  margin-bottom: 10px;
-  border: 2px solid darkgreen;
+    color: white;
+    background-color: green;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    border: 2px solid darkgreen;
+}
+
+body {
+    background: #111;
+    color: #ddd;
 }
